--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="Main">
       <div id="head">
         <img class="logo" src="./files/logo.png" />
-        <img class="main-right" src="./files/main.jpg" />
+        <img class="main-right" src="./files/Main.jpg" />
         <h1>MINION RUSH</h1>
       </div>
 
